<resources>
    <string name="app_name">eventbrite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore_upcoming_and_nearby_events">" Explore Upcoming and Nearby Events "</string>
    <string name="in_publishing_and_graphic_design">" In publishing and graphic designn, Lorem is a placeholder text commonly "</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="we_have_modern_events_calendar_feature">" We Have Modern Events Calendar Feature"</string>
    <string name="to_look_up_more_events">"  To Look Up More Events or Activities Nearby By Map"</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or">OR</string>
    <string name="full_name">Full name</string>
    <string name="abc_email_com">abc@email.com</string>
    <string name="your_password">Your Password</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="back_button">back_button</string>
    <string name="onboarding_image_view">onboarding_image_view</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="please_enter_your_email_address_to_request_a_password_reset">Please enter your email address to request a password reset</string>
    <string name="send">SEND</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="see_all">See All</string>
    <string name="sports">Sports</string>
    <string name="_10_june">10 JUNE</string>
    <string name="international_band_mu">International Band Mu...</string>
    <string name="_36_guild_street_london_uk">36 Guild Street London, UK</string>
    <string name="invite_your_friends">Invite your friends</string>
    <string name="get_20_off_your_ticket">Get $20 off your ticket</string>
    <string name="left_arrow">left_arrow</string>
    <string name="gift">gift</string>
    <string name="invite">INVITE</string>
    <string name="menu">menu</string>
    <string name="explore">Explore</string>
    <string name="events">Events</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="query_hint_string">| Search for Events</string>
    <string name="filters">Filters</string>
    <string name="current_location">Current Location</string>
    <string name="new_york_usa">New York, USA</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="buy_ticket_120">Buy Ticket $120</string>
    <string name="event_details">Event Details</string>
    <string name="search">Search</string>
    <string name="a_virtual_evening_of_smooth_jazz">A virtual evening of smooth jazz</string>
    <string name="_1st_may_sat_2_00_pm">1ST MAY - SAT - 2:00 PM</string>
    <string name="upcoming">Upcoming</string>
    <string name="past_events">Past Events</string>
    <string name="no_upcoming_events">No Upcoming Events</string>
    <string name="explore_events">Explore Events</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_me">About Me</string>
    <string name="about_me_full_text">About Me Full Text</string>
    <string name="follow">Follow</string>
    <string name="about">About</string>
    <string name="enjoy_your_favorite_dishe_and_a_lovely_your_friends_and_family_and_have_a_great_time_food_from_local_food_trucks_will_be_available_for_purchase_read_more"> With its cubicles and commutes, has been replaced in many industries by home offices and flexible schedules.
        Cloud computing enables employees to access files and systems from virtually anywhere, while collaborative tools like Slack, Microsoft Teams, and Zoom allow for real-time collaboration and meetings.</string>
</resources>