<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen"
    tools:context=".ResetPassword">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-14dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/resetPasswordTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/airbnb_cereal_w_xbd"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <TextView
        android:id="@+id/pleaseEnterEmailTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/airbnb_cereal_w_bd"
        android:text="@string/please_enter_your_email_address_to_request_a_password_reset"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/resetPasswordTv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/resetPasswordEmailTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/pleaseEnterEmailTV">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/resetPasswordEmailTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/mail"
            android:drawablePadding="8dp"
            android:fontFamily="@font/airbnb_cereal_w_lt"
            android:hint="@string/abc_email_com"
            android:inputType="text|textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/resetPasswordConfirmationBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/eventbrite_card_blue"
        android:fontFamily="@font/airbnb_cereal_w_bk"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/resetPasswordEmailTextInputLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>