<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EmptyEventsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/emptyEventsFragGuideLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/emptyEventsFragGuideLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:importantForAccessibility="no"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="@id/emptyEventsFragGuideLine1"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/airbnb_cereal_w_xbd"
        android:text="@string/events"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintStart_toEndOf="@id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView10" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/emptyEventsFragGuideLine2"
        app:layout_constraintStart_toStartOf="@+id/emptyEventsFragGuideLine1"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:tabBackground="@color/button_bg_color_2"
        app:tabIndicatorColor="@color/eventbrite_card_blue"
        app:tabSelectedTextColor="@color/eventbrite_card_blue">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upcoming" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/past_events" />

    </com.google.android.material.tabs.TabLayout>

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:src="@drawable/no_events"
        app:layout_constraintEnd_toStartOf="@+id/emptyEventsFragGuideLine2"
        app:layout_constraintStart_toStartOf="@+id/emptyEventsFragGuideLine1"
        app:layout_constraintTop_toBottomOf="@id/tabLayout" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/airbnb_cereal_w_xbd"
        android:text="@string/no_upcoming_events"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/emptyEventsFragGuideLine2"
        app:layout_constraintStart_toStartOf="@+id/emptyEventsFragGuideLine1"
        app:layout_constraintTop_toBottomOf="@id/imageView11" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/eventbrite_card_blue"
        android:text="@string/explore_events"
        android:textSize="16sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/emptyEventsFragGuideLine2"
        app:layout_constraintStart_toStartOf="@id/emptyEventsFragGuideLine1" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="-60dp"
        android:importantForAccessibility="no"
        android:src="@drawable/button_auth_icons"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintVertical_bias="0.555" />

</androidx.constraintlayout.widget.ConstraintLayout>