<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrganizerProfileFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/organizerProfileFragGuideLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/organizerProfileFragGuideLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView4"
        android:name="com.example.eventbrite.MyProfileFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="-80dp"
        android:backgroundTint="@color/white"
        android:elevation="2dp"
        android:importantForAccessibility="no"
        android:src="@drawable/follow"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/eventbrite_card_blue"
        android:fontFamily="@font/airbnb_cereal_w_xbd"
        android:text="@string/follow"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@id/organizerProfileFragGuideLine2"
        app:layout_constraintStart_toEndOf="@id/organizerProfileFragGuideLine1"
        app:layout_constraintTop_toBottomOf="@id/fragmentContainerView4" />

    <com.google.android.material.tabs.TabLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toStartOf="@id/organizerProfileFragGuideLine2"
        app:layout_constraintStart_toEndOf="@id/organizerProfileFragGuideLine1"
        app:layout_constraintTop_toBottomOf="@id/button3"
        app:tabIndicatorColor="@color/eventbrite_card_blue"
        app:tabSelectedTextColor="@color/eventbrite_card_blue">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/events" />

    </com.google.android.material.tabs.TabLayout>
</androidx.constraintlayout.widget.ConstraintLayout>