<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".AuthenticationFrag">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ImageButton
        android:id="@+id/backImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-15dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/back_button"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/screenNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/airbnb_cereal_w_bd"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/backImageBtn" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullNameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/screenNameTV">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/FullNameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/user_icon"
            android:drawablePadding="8dp"
            android:fontFamily="@font/airbnb_cereal_w_lt"
            android:hint="@string/full_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/fullNameTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EmailTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/mail"
            android:drawablePadding="8dp"
            android:fontFamily="@font/airbnb_cereal_w_lt"
            android:hint="@string/abc_email_com"
            android:inputType="text|textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/darker_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PasswordTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/padlock"
            android:drawablePadding="8dp"
            android:fontFamily="@font/airbnb_cereal_w_lt"
            android:hint="@string/your_password"
            android:inputType="text|textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioButton
        android:id="@+id/rememberMeRadioBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/airbnb_cereal_w_xbd"
        android:text="Remember Me"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout" />

    <TextView
        android:id="@+id/forgotPasswordClicakbleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/airbnb_cereal_w_xbd"
        android:text="Forgot Password?"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/rememberMeRadioBtn"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/darker_gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ConfirmPasswordTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/padlock"
            android:drawablePadding="8dp"
            android:fontFamily="@font/airbnb_cereal_w_lt"
            android:hint="@string/confirm_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/authenticateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/eventbrite_card_blue"
        android:elevation="10dp"
        android:fontFamily="@font/airbnb_cereal_w_xbd"
        android:stateListAnimator="@android:anim/bounce_interpolator"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textColorLink="@color/eventbrite_card_blue"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTextInputLayout" />

    <TextView
        android:id="@+id/orTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/airbnb_cereal_w_xbd"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/authenticateBtn" />

    <Button
        android:id="@+id/loginWithGoogleBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/google"
        android:elevation="10dp"
        android:fontFamily="@font/airbnb_cereal_w_xbd"
        android:stateListAnimator="@android:anim/bounce_interpolator"
        android:text="@string/login_with_google"
        android:textColor="@color/black"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/orTV" />

    <Button
        android:id="@+id/loginWithFbBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/facebook"
        android:elevation="10dp"
        android:fontFamily="@font/airbnb_cereal_w_xbd"
        android:stateListAnimator="@android:anim/bounce_interpolator"
        android:text="@string/login_with_facebook"
        android:textColor="@color/black"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/loginWithGoogleBtn" />

    <LinearLayout
        android:id="@+id/alreadyHaveAnAccTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/loginWithFbBtn">

        <TextView
            android:id="@+id/alreadyHaveAnAccountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/airbnb_cereal_w_xbd"
            android:text="Already have an account ?"
            android:textAlignment="textEnd"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/signInClickableTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/airbnb_cereal_w_xbd"
            android:paddingStart="4dp"
            android:text="Sign In"
            android:textColor="@color/eventbrite_card_blue" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="40dp"
        android:elevation="12dp"
        android:src="@drawable/google"
        app:layout_constraintBottom_toBottomOf="@+id/loginWithGoogleBtn"
        app:layout_constraintStart_toStartOf="@+id/loginWithGoogleBtn"
        app:layout_constraintTop_toTopOf="@+id/loginWithGoogleBtn" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="40dp"
        android:elevation="12dp"
        android:src="@drawable/facebook"
        app:layout_constraintBottom_toBottomOf="@+id/loginWithFbBtn"
        app:layout_constraintStart_toStartOf="@+id/loginWithFbBtn"
        app:layout_constraintTop_toTopOf="@+id/loginWithFbBtn" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="40dp"
        android:elevation="12dp"
        android:src="@drawable/button_auth_icons"
        app:layout_constraintBottom_toBottomOf="@+id/authenticateBtn"
        app:layout_constraintEnd_toEndOf="@+id/authenticateBtn"
        app:layout_constraintTop_toTopOf="@+id/authenticateBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>