<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MyProfileFullFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/MyProfileFullGuideLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/MyProfileGuideLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/profileReusedFragmentContainerView"
        android:name="com.example.eventbrite.MyProfileFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/MyProfileGuideLine2"
        app:layout_constraintStart_toStartOf="@id/MyProfileFullGuideLine1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="-40dp"
        android:importantForAccessibility="no"
        android:src="@drawable/edit_profile"
        app:layout_constraintBottom_toBottomOf="@+id/EditProfileMyProfileFullFragmentBtn"
        app:layout_constraintEnd_toStartOf="@+id/EditProfileMyProfileFullFragmentBtn"
        app:layout_constraintTop_toTopOf="@+id/EditProfileMyProfileFullFragmentBtn" />

    <Button
        android:id="@+id/EditProfileMyProfileFullFragmentBtn"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_outline"
        android:fontFamily="@font/airbnb_cereal_w_xbd"
        android:text="@string/edit_profile"
        android:textAlignment="viewEnd"
        android:textColor="@color/eventbrite_card_blue"
        app:layout_constraintEnd_toStartOf="@id/MyProfileGuideLine2"
        app:layout_constraintStart_toStartOf="@id/MyProfileFullGuideLine1"
        app:layout_constraintTop_toBottomOf="@id/profileReusedFragmentContainerView" />

    <TextView
        android:id="@+id/aboutMeLabelMyProfileFullFragTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/airbnb_cereal_w_xbd"
        android:text="@string/about_me"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/MyProfileFullGuideLine1"
        app:layout_constraintTop_toBottomOf="@id/EditProfileMyProfileFullFragmentBtn" />

    <TextView
        android:id="@+id/aboutMeFullTextTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/airbnb_cereal_w_bk"
        android:text="@string/about_me_full_text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/MyProfileGuideLine2"
        app:layout_constraintStart_toStartOf="@id/MyProfileFullGuideLine1"
        app:layout_constraintTop_toBottomOf="@id/aboutMeLabelMyProfileFullFragTV" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/aboutMeTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@id/MyProfileGuideLine2"
        app:layout_constraintStart_toStartOf="@id/MyProfileFullGuideLine1"
        app:layout_constraintTop_toBottomOf="@id/aboutMeFullTextTV">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/AboutMeTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/airbnb_cereal_w_lt"
            android:hint="About You Description"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>